<resources>
    <string name="app_name">Trakt Manager</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->


    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->

    <string name="LISTS">Lists</string>
    <string name="DIRECTED_BY">Directed By:</string>
    <string name="written_by">Written By:</string>
    <string name="stats">Stats</string>
    <string name="movies">Movies</string>
    <string name="collected_empty">Collected: 0</string>
    <string name="plays_empty">Plays: 0</string>
    <string name="duration_empty">Duration: 0 days, 0 hours, 0 minutes</string>
    <string name="shows">Shows</string>
    <string name="airing_soon">Airing Soon</string>
    <string name="show_all">Show all</string>
    <string name="last_watched_movies">Last Watched Movies …</string>
    <string name="last_watched_episodes">Last Watched Episodes …</string>
    <string name="information">Information</string>
    <string name="directed_by">Directed By:</string>
    <string name="external_links">External Links:</string>
    <string name="offcial_website">Offcial Website</string>
    <string name="imdb">IMDB</string>
    <string name="tmdb">TMDB</string>
    <string name="switch_season">Switch Season:</string>
    <string name="created_by">Created By:</string>
    <string name="trailer">Trailer</string>
    <string name="overview">Overview</string>
    <string name="seasons">Seasons</string>
    <string name="progress">Progress</string>
    <string name="no_results">No results for query!</string>
    <string name="list_name">List Name</string>
    <string name="list_description">List Description</string>
    <string name="allow_comments">Allow Comments</string>
    <string name="display_numbers">Display Numbers</string>
    <string name="save_list">Save List</string>
    <string name="reload_poster">Reload Poster</string>
    <string name="switch_layout">Switch layout</string>
    <string name="show_hidden_shows">Show hidden shows</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="collected_at">Collected At</string>
    <string name="year">Year</string>
    <string name="remove_from_collection">Remove from Collection</string>
    <string name="filter">Filter</string>
    <string name="choose_a_rating">Choose a rating</string>
    <string name="rate">Rate!</string>
    <string name="reset_rating">Reset Rating</string>
    <string name="close">Close</string>
    <string name="unwatched">Unwatched</string>
    <string name="logoff">Logoff</string>
    <string name="cast">Cast</string>
    <string name="you_are_not_logged_in_to_trakt">You are not logged in to Trakt! Please connect your Trakt account to access this feature!</string>
    <string name="connect_to_trakt">Connect to Trakt</string>
    <string name="no_cast_persons">No cast found</string>
    <string name="main_cast">Main Cast</string>
    <string name="guest_stars">Guest Stars</string>
    <string name="my_trakt">My Trakt</string>
    <string name="dash">-</string>
    <string name="your_rating">Your Rating</string>
    <string name="trakt_rating_empty">Trakt Rating: Unrated</string>
    <string name="last_watched_unwatched">Last watched: Unwatched</string>
    <string name="plays_0">Plays (0)</string>
    <string name="checkin">Checkin</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="add_to_watch_history">Add to Watch History</string>
    <string name="remove_this_play">Remove this play</string>
    <string name="watch_now">Watch Now</string>
    <string name="stream_now">Stream Now</string>
    <string name="amazon_prime">Amazon Prime</string>
    <string name="apple_itunes">Apple iTunes</string>
    <string name="disney">Disney</string>
    <string name="google_play">Google Play</string>
    <string name="netflix">NetFlix</string>
    <string name="youtube">Youtube</string>
    <string name="buy_now">Buy Now</string>
    <string name="powered_by_justwatch">Powered by JustWatch</string>
    <string name="episode">Episode</string>
    <string name="movie">movie</string>
    <string name="person">Person</string>
    <string name="show">Show</string>
    <string name="sorting">Sorting</string>
    <string name="added">Added</string>
    <string name="rank">Rank</string>
    <string name="released">Released</string>
    <string name="random">Random</string>
    <string name="name">Name</string>
    <string name="number_of_entries">Number of Entries</string>
    <string name="created">Created</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="not_interested">Not Interested</string>
    <string name="last_recommended">Last Recommended</string>
    <string name="season_progress">Season Progress:</string>
    <string name="add_from_collection">Add From Collection</string>
    <string name="add_from_search">Add From Search</string>
    <string name="go_to_show">Go to show</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="upcoming_episodes">Upcoming Episodes</string>
    <string name="collection">Collection</string>
    <string name="watched">Watched</string>
    <string name="suggested">Suggested</string>
    <string name="trending">Trending</string>
    <string name="upcoming">Upcoming</string>
    <string name="track">TRACK</string>
    <string name="airing_next">Airing Next</string>
    <string name="tracked_at">Tracked At</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="items">Items</string>
    <string name="total_watching">Total watching</string>
    <string name="go_to_episode">Go to Episode</string>
    <string name="shows_airing">Shows airing</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="plays_unwatched">Plays (0)</string>
    <string name="not_watched">You have not watched this %s yet!</string>
    <string name="unwatched_placeholder">Last watched: Unwatched</string>
    <string name="collection_shows_empty">You have nothing in your collection :-(</string>
    <string name="none_watched">Start watching shows on Trakt and the progress will appear here!</string>
    <string name="no_recommended_shows">You have no recommendations right now.</string>
    <string name="no_upcoming_shows">You have no upcoming shows.</string>
    <string name="credits_loading_error">Error loading credits</string>
    <string name="collected_movies_none">You have not collected any movies yet!</string>
    <string name="movie_suggested_none">You have no movie recommendations at this time</string>
    <string name="load_trending_movies_failed">Could not load Trending movies from Trakt</string>
    <string name="no_list_entries">There are no items in this list, why not add some?</string>
    <string name="error_loading_list_items">An error occurred loading list items</string>
    <string name="unknown_list">Unknown List</string>
    <string name="my_lists">My Lists</string>
    <string name="unable_load_stats">Unable to load user stats</string>
    <string name="airing_empty">Nothing airing soon</string>
    <string name="no_watched_movies">No watched movies</string>
    <string name="no_watched_episodes">No watched episodes..</string>
    <string name="refresh">Refresh</string>
    <string name="trakt_account_not_connected">Trakt account not connected. Connect your Trakt account to enable features such as Ratings, Checking in and saving this %s for later!</string>
    <string name="login_trakt_required">Please connect your Trakt Account to access this feature.</string>
    <string name="title_activity_debug">DebugActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>