<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/newlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:hint="@string/list_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newlist_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:hint="@string/list_description"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newlist_name" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/newlist_allow_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_comments"
        android:layout_margin="14dp"
        app:layout_constraintTop_toBottomOf="@id/newlist_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/newlist_display_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_numbers"
        android:layout_margin="14dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/newlist_desc"
        app:layout_constraintStart_toEndOf="@id/newlist_allow_comments" />

    <Spinner
        android:id="@+id/newlist_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/newlist_allow_comments"
        app:layout_constraintTop_toBottomOf="@id/newlist_display_numbers" />

    <Button
        android:id="@+id/newlist_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_list"
        android:layout_margin="14dp"
        app:layout_constraintTop_toBottomOf="@id/newlist_privacy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>