<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionbuttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

    <TextView
        android:id="@+id/actionbuttons_account_actions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_trakt"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actionbuttons_rating"
        android:backgroundTint="#FFD700"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_baseline_star_rate_24"
        android:textAlignment="center"
        android:paddingTop="3dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:text="@string/dash"
        tools:text="10"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/actionbuttons_account_actions"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actionbuttons_rating_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_rating"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@id/actionbuttons_rating"
        app:layout_constraintStart_toEndOf="@id/actionbuttons_rating"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/actionbuttons_trakt_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trakt_rating_empty"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/actionbuttons_rating_title"
        app:layout_constraintTop_toBottomOf="@id/actionbuttons_rating_title"
        app:layout_constraintEnd_toEndOf="@id/actionbuttons_rating_title" />

    <TextView
        android:id="@+id/actionbuttons_last_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/last_watched_unwatched"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/actionbuttons_trakt_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/actionbuttons_all_plays" />

    <com.google.android.material.chip.Chip
        android:id="@+id/actionbuttons_all_plays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:visibility="gone"
        android:text="@string/plays_0"
        app:layout_constraintTop_toTopOf="@id/actionbuttons_last_watched"
        app:layout_constraintEnd_toEndOf="@id/actionbuttons_last_watched"
        app:layout_constraintStart_toEndOf="@id/actionbuttons_last_watched"
        app:layout_constraintBottom_toBottomOf="@id/actionbuttons_last_watched"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/actionbuttons_rating_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="actionbuttons_rating, actionbuttons_rating_title, actionbuttons_trakt_rating,actionbuttons_last_watched,actionbuttons_all_plays" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/actionbuttons_rating_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="actionbuttons_rating, actionbuttons_rating_title, actionbuttons_trakt_rating" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/actionbuttons_rating_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/actionbuttons_checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_check_24"
                android:text="@string/checkin"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/actionbuttons_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_collections_bookmark_24"
                android:text="@string/add_to_collection"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/actionbuttons_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_calendar_month_24"
                android:text="@string/add_to_watch_history"
                app:layout_constraintTop_toBottomOf="@id/actionbuttons_collection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.chip.Chip
                android:id="@+id/actionbuttons_lists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_list_24"
                android:text="@string/LISTS"
                app:layout_constraintTop_toBottomOf="@id/actionbuttons_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/actionbuttons_progressbar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionbuttons_logged_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:id="@+id/actionbuttons_logged_out_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_trakt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actionbuttons_logged_out_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/actionbuttons_logged_out_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/actionbuttons_logged_out_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>